# flowy

./: .gitignore  AGENTS.md  INSTALL.md  README.md  TESTING.md  build.sh  configuration.py  display_manager.py  file_validator.py  history_logger.py  interactive_shell.py  main.py  module_loader.py  pyproject.toml  requirements.txt  run_tests.sh  save_file_manager.py  shell_completers.py  state_manager.py  template_parser.py  template_renderer.py
.claude/: settings.local.json
modules/: helpers.py  utils.py
saves/: cascade_demo  example  example.save  module_demo  test
templates/: example.template  include_demo.template  module_demo.template  robust_example.template  subtemplate_example.template
templates/common/: footer.template  header.template
templates/reports/: monthly.template
tests/: test_display_manager.py  test_file_validator.py  test_history_logger.py  test_interactive_shell.py  test_main.py  test_module_loader.py  test_save_file_manager.py  test_state_manager.py  test_template_parser.py  test_template_renderer.py
