[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowy"
description = "Flowy - Interactive Jinja2 Template Rendering with Python Integration"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["template", "jinja2", "cli", "interactive", "rendering", "flowy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup",
    "Environment :: Console",
]

dependencies = [
    "Jinja2>=3.1.0",
    "prompt_toolkit>=3.0.0",
    "PyYAML>=6.0",
    "colorama>=0.4.6",
]

[project.scripts]
flowy = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/flowy"
Documentation = "https://github.com/yourusername/flowy#readme"
Repository = "https://github.com/yourusername/flowy.git"
Issues = "https://github.com/yourusername/flowy/issues"

[tool.setuptools]
py-modules = [
    "main",
    "configuration",
    "interactive_shell",
    "template_renderer",
    "template_parser",
    "state_manager",
    "save_file_manager",
    "module_loader",
    "display_manager",
    "history_logger",
    "shell_completers",
    "file_validator",
]

[tool.setuptools.dynamic]
version = {attr = "configuration.VERSION"}

[tool.setuptools.package-data]
"*" = [
    "templates/**/*.template",
    "modules/**/*.py",
    "saves/**/*",
]
